last working version (perhaps ever)

--- a/Core Project.uvprojx
+++ b/Core Project.uvprojx
@@ -467,6 +467,8 @@
               <FileName>led.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\led.c</FilePath>
+            </File>
+            <File>
               <FileName>audio.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\audio.c</FilePath>
